// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks actions should cancelTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel some-name task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "type": "TASKS_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": [Error: Network Error],
      "type": "TASKS_CANCEL_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution task has to be cancellable",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should cancelTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "Trying to cancel some-name task",
          "type": "info",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
  Array [
    Object {
      "type": "TASKS_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_CANCEL_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution was cancelled",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should forceCancelTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution Task cannot be cancelled with force at the moment.",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should forceCancelTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution Task resources were unlocked with force.",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should resumeTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_RESUME_REQUEST",
    },
  ],
  Array [
    Object {
      "payload": [Error: Network Error],
      "type": "TASKS_RESUME_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution could not be resumed",
          "type": "error",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should resumeTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_RESUME_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_RESUME_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution was resumed",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should unlockTaskRequest and fail 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_FORCE_CANCEL_FAILURE",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution Task cannot be cancelled with force at the moment.",
          "type": "warning",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;

exports[`Tasks actions should unlockTaskRequest and succeed 1`] = `
Array [
  Array [
    Object {
      "type": "TASKS_UNLOCK_REQUEST",
    },
  ],
  Array [
    Object {
      "type": "TASKS_UNLOCK_SUCCESS",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "message": Object {
          "message": "some-name Task execution Task resources were unlocked ",
          "type": "success",
        },
      },
      "type": "TOASTS_ADD",
    },
  ],
]
`;
